Fixing gap in IE due to extra padding.

--- a/dokeos/claroline/css/default.css
+++ b/dokeos/claroline/css/default.css
@@ -915,6 +915,11 @@ ul.treeMenu li div a
 	padding-top: 3px;
 }
 
+ul.treeMenu li div
+{
+	overflow: hidden;
+}
+
 /*
  * Tweak: Some extra space between folder and text--2px will do.
  */
